fixed button alignment on blog posts

--- a/src/assets/less/blog.less
+++ b/src/assets/less/blog.less
@@ -762,6 +762,13 @@
                 border-radius: (8/16rem);
             }
         }
+
+        .blog-button-wrapper {
+            margin-top: 40px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
     }
 }
 
